--- a/SpringFullCalendar/pom.xml
+++ b/SpringFullCalendar/pom.xml
@@ -231,7 +231,19 @@
     		<version>2.1.10.RELEASE</version>
 		</dependency>
 
-		
+		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.5</version>
+		</dependency>
 		
 	</dependencies>
     <build>
